--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -18,11 +18,10 @@
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{xspace}
-\usepackage{mhchem}
-
+\usepackage[version=3]{mhchem}
 \definecolor{srcback}{rgb}{1,0.8,0.1}
 
-\lstset{ %
+\lstset{%
 language=C++,                % choose the language of the code
 basicstyle=\footnotesize,       % the size of the fonts that are used for the code
 numbers=left,                   % where to put the line-numbers
@@ -41,18 +40,14 @@ breakatwhitespace=false,    % sets if automatic breaks should only happen at whi
 escapeinside={\%*}{*)}          % if you want to add a comment within your code
 }
 
-\newcommand{\smallverbatimfile}[1]{{\footnotesize\verbatimfile{#1}}}
+% \newcommand{\smallverbatimfile}[1]{{\footnotesize\verbatimfile{#1}}}
 
 \def\reportnum{Ris{\o}--R--1416(rev.ed.)(EN)}
-
-
 
 \newcommand{\MCS}{McStas\xspace}
 \newcommand{\version}{{2.0}}
 \newcommand{\reldate}{{Sep, 2013}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
-
-
 
 % enable index generation
 \makeindex
@@ -68,7 +63,7 @@ escapeinside={\%*}{*)}          % if you want to add a comment within your code
 
 \tableofcontents
 
-%FIXME \include{preface}
+\include{preface}
 
 \include{intro}
 \include{changes}
