--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -33,9 +33,7 @@ community, too numerous to mention here.
 %users to contribute components with manual entries for inclusion in
 %future versions of \MCS.
 
-In case of errors, questions, or suggestions,
-%or other need for support should arise,
-do not hesitate to
+In case of errors, questions, or suggestions, do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
 or consult the \MCS home page~\cite{mcstas_webpage}.
 A special bug/request reporting service is available \cite{mczilla_webpage}.
@@ -55,7 +53,7 @@ to \MCS \version:
   Focalisation\_mirrors.instr (Sylvain Desert, LLB)
 \item PSI\_DMC.instr (L. Keller and U. Filges PSI / P. Willendrup, Ris\o\ DTU)
 \end{itemize}
-Thank you 	guys! This is what \MCS is all about!
+Thank you guys! This is what \MCS is all about!
 
 Third party software included in \MCS are:
 \begin{itemize}
